@@ -10,7 +10,7 @@
 </style>
 <title>tester</title></head><body>
 release: freeRouter v25.11.24-cur, done by sprscc13@mrn0b0dy.<br/>
-tested: 2025-11-24 19:08:53, took 00:16:37, with 50 workers, on 4070 cases, 0 failed, 0 traces, 5 retries<br/>
+tested: 2025-11-24 20:13:36, took 00:12:50, with 50 workers, on 4072 cases, 0 failed, 0 traces, 5 retries<br/>
 jvm: ./rtr.bin, other: null<br/>
 <br/>
 <table><thead><tr><td><b>file</b></td><td><b>result</b></td><td><b>test</b></td></tr></thead><tbody>
@@ -891,6 +891,8 @@ jvm: ./rtr.bin, other: null<br/>
 <tr><td><a href="http://sources.freertr.org/cfg/crypt-nat15.tst">crypt-nat15.tst</a></td><td>success</td><td>target interface translation to address</td></tr>
 <tr><td><a href="http://sources.freertr.org/cfg/crypt-nat16.tst">crypt-nat16.tst</a></td><td>success</td><td>ipv4 target port selection</td></tr>
 <tr><td><a href="http://sources.freertr.org/cfg/crypt-nat17.tst">crypt-nat17.tst</a></td><td>success</td><td>ipv6 target port selection</td></tr>
+<tr><td><a href="http://sources.freertr.org/cfg/crypt-nat18.tst">crypt-nat18.tst</a></td><td>success</td><td>ipv4-ipv6 unicast translation</td></tr>
+<tr><td><a href="http://sources.freertr.org/cfg/crypt-nat19.tst">crypt-nat19.tst</a></td><td>success</td><td>ipv4-ipv6 multicast translation</td></tr>
 <tr><td><a href="http://sources.freertr.org/cfg/crypt-openvpn01.tst">crypt-openvpn01.tst</a></td><td>success</td><td>openvpn over ipv4</td></tr>
 <tr><td><a href="http://sources.freertr.org/cfg/crypt-openvpn02.tst">crypt-openvpn02.tst</a></td><td>success</td><td>openvpn over ipv6</td></tr>
 <tr><td><a href="http://sources.freertr.org/cfg/crypt-openvpn03.tst">crypt-openvpn03.tst</a></td><td>success</td><td>openvpn over openvpn</td></tr>
