@@ -17658,3 +17658,6 @@ failed: wireguard over asymmetric ports
 ---------------------------------- 2025-11-13 06:44:02 25.11.13
 no failed: wireguard over asymmetric ports
 qc pass: wireguard over asymmetric ports
+---------------------------------- 2025-11-24 20:00:45 25.11.24
+qc pass: ipv4-ipv6 unicast translation
+qc pass: ipv4-ipv6 multicast translation
